--- a/index.html
+++ b/index.html
@@ -149,6 +149,84 @@
                 </div>
             </div>
         </div>
+        <section>
+            <div class="row align-items-center my-5">
+                <div class="col-md-5 col-xs-12">
+                    <h1>Heading</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere est sed pariatur esse neque
+                        dicta,
+                        accusamus repellat officiis, velit provident, impedit ullam molestiae perferendis. Mollitia,
+                        excepturi.
+                        Doloremque molestias magnam vitae.</p> Doloremque molestias magnam vitae.</p>
+                </div>
+                <div class="col-md-7 col-xs-12">
+                    <img src="https://images.unsplash.com/photo-1646061632512-37bb879e5f7c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=711&q=80"
+                        alt="">
+                </div>
+            </div>
+            <div class="row align-items-center mb-5">
+                <div class="col-md-7 col-xs-12">
+                    <img src="https://images.unsplash.com/photo-1646061632501-be2290e005e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                        alt="">
+                </div>
+                <div class="col-md-5 col-xs-12 align-items-center">
+                    <h1>Heading</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere est sed pariatur esse neque
+                        dicta,
+                        accusamus repellat officiis, velit provident, impedit ullam molestiae perferendis. Mollitia,
+                        excepturi.
+                        Doloremque molestias magnam vitae.</p> Doloremque molestias magnam vitae.</p>
+                </div>
+            </div>
+        </section>
+
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1645917864901-1fa7731b9af6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the
+                                card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1645917864901-1fa7731b9af6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the
+                                card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1645917864901-1fa7731b9af6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the
+                                card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
